# SNIaSpectrumGen

./: .gitignore  MANIFEST.in  Makefile  _SpectrumGenerator.py  pyproject.toml
SNIaSpectrumGen/: SpectrumGenerator.py
SNIaSpectrumGen/KDE/: KDEPipeline.py
models/: kde.pkl
tests/: conftest.py  helpers.py  test_interpolation.py  test_interpolation_quality.py  test_noise_scaling.py  test_output.py  test_spectrum_generator.py  test_speedup.py  test_wavelength_ranges.py  test_worker_basic.py
