[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"


[project]
name = "SNIaSpectrumGen"
version = "0.0.1"
authors = [
    {name = "Anthony Burrow", email = "anthony.r.burrow@gmail.com"},
]
maintainers = [
    {name = "Anthony Burrow", email = "anthony.r.burrow@gmail.com"}
]
description = "A SN Ia spectrum generator using empirical models."
license = { file = "LICENSE" }
readme = "README.md"
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "SpectrumCore @ git+https://github.com/anthonyburrow/SpectrumCore.git"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
Repository = "https://github.com/anthonyburrow/SNIaSpectrumGen.git"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["SNIaSpectrumGen*"]

# Install top-level data files into site-packages/data so
# code that looks for `<site-packages>/data/*.dat` can find them
[tool.setuptools.data-files]
"data" = [
    "data/all_params.dat",
    "data/eigenvectors.dat",
    "data/mean.dat",
    "data/std.dat",
    "data/wavelengths.dat",
]